# HPDTA_ITEX_ImageParser

./: README.md  pyproject.toml
itexfile/: __init__.py  __main__.py  read.py  schema.py  write.py
